# QtAndroidTools

./: .gitignore  LICENSE  README.md
.github/: FUNDING.yml
Documentation/: index.html
Documentation/css/: prettify.css  style.css
Documentation/js/: scripts.min.js
QtAndroidTools/: CMakeLists.txt  QAndroidAdMobBanner.cpp  QAndroidAdMobBanner.h  QAndroidAdMobInterstitial.cpp  QAndroidAdMobInterstitial.h  QAndroidAdMobRewardedAd.cpp  QAndroidAdMobRewardedAd.h  QAndroidAdMobRewardedVideo.cpp  QAndroidAdMobRewardedVideo.h  QAndroidApkExpansionFiles.cpp  QAndroidApkExpansionFiles.h  QAndroidApkInfo.cpp  QAndroidApkInfo.h  QAndroidAppPermissions.cpp  QAndroidAppPermissions.h  QAndroidAudio.cpp  QAndroidAudio.h  QAndroidAuthentication.cpp  QAndroidAuthentication.h  QAndroidBatteryState.cpp  QAndroidBatteryState.h  QAndroidGoogleAccount.cpp  QAndroidGoogleAccount.h  QAndroidGoogleDrive.cpp  QAndroidGoogleDrive.h  QAndroidImages.cpp  QAndroidImages.h  QAndroidNotification.cpp  QAndroidNotification.h  QAndroidPlayStore.cpp  QAndroidPlayStore.h  QAndroidScreen.cpp  QAndroidScreen.h  QAndroidSharing.cpp  QAndroidSharing.h  QAndroidSignalStrength.cpp  QAndroidSignalStrength.h  QAndroidSystem.cpp  QAndroidSystem.h  QAndroidUserMessagingPlatform.cpp  (+6 more)
QtAndroidTools/aidl/com/android/vending/licensing/: ILicenseResultListener.aidl  ILicensingService.aidl
QtAndroidTools/src/com/falsinsoft/QtAndroidTools/: ApkExpansionDownloaderService.java
QtAndroidTools/src/com/falsinsoft/qtandroidtools/: AdMobBanner.java  AdMobInterstitial.java  AndroidAdMob.java  AndroidAdMobBanner.java  AndroidAdMobInterstitial.java  AndroidAdMobRewardedAd.java  AndroidAdMobRewardedVideo.java  AndroidApkExpansionFiles.java  AndroidAudio.java  AndroidAuthentication.java  AndroidBatteryState.java  AndroidGoogleAccount.java  AndroidGoogleDrive.java  AndroidImages.java  AndroidNotification.java  AndroidPlayStore.java  AndroidScreen.java  AndroidSharing.java  AndroidSignalStrength.java  AndroidSystem.java  AndroidTools.java  AndroidUserMessagingPlatform.java  ApkExpansionDownloader.java  ApkExpansionDownloaderAlarmReceiver.java  BatteryStateListener.java  Images.java  SignalStrengthListener.java  SyncRunOnUiThread.java
QtAndroidTools/src/com/google/android/vending/expansion/downloader/: Helpers.java  IDownloaderClient.java  IDownloaderService.java
QtAndroidTools/src/com/google/android/vending/expansion/downloader/impl/: BroadcastDownloaderClient.java  ClientProxy.java  CustomIntentService.java  DownloadInfo.java  DownloadNotification.java  DownloadThread.java  DownloaderProxy.java  DownloaderService.java  ServiceHandler.java
QtAndroidToolsDemo/: CMakeLists.txt  Main.cpp  Main.qml  QmlFiles.qrc  QtAndroidToolsDemo.pro  QtAndroidToolsDemo.qrc  Sources.qrc  qtquickcontrols2.conf
QtAndroidToolsDemo/android/: AndroidManifest.xml  build.gradle  gradle.properties
QtAndroidToolsDemo/android/res/drawable/: splashscreen.xml
QtAndroidToolsDemo/android/res/xml/: sharedfilepaths.xml
QtAndroidToolsDemo/icons/tools/: index.theme
QtAndroidToolsDemo/tools/: AndroidAdMobBanner.qml  AndroidAdMobInterstitial.qml  AndroidAdMobRewardedAd.qml  AndroidAdMobRewardedVideo.qml  AndroidApkExpansionFiles.qml  AndroidApkInfo.qml  AndroidAppPermissions.qml  AndroidAudio.qml  AndroidAuthentication.qml  AndroidBatteryState.qml  AndroidGoogleAccount.qml  AndroidGoogleDrive.qml  AndroidImages.qml  AndroidNotification.qml  AndroidPlayStore.qml  AndroidScreen.qml  AndroidSharing.qml  AndroidSignalStrength.qml  AndroidSystem.qml  AndroidUserMessagingPlatform.qml  ScrollablePage.qml
